Intro: fix minor spacing issues
Sam had ideas of how to tighten this design up a little more. Quick
enough to take care of that I figured I'd do it now.

--- a/packages/thicket-intro/src/App/GifCreator/GifCreator.css
+++ b/packages/thicket-intro/src/App/GifCreator/GifCreator.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
+  padding-bottom: 6em;
 }
 
 .GifCreator--Explanation {
