--- a/packages/thicket-intro/src/App/Why/Why.css
+++ b/packages/thicket-intro/src/App/Why/Why.css
@@ -1,9 +1,6 @@
 .Why {
-  min-height: 100vh;
   text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
+  padding-bottom: 6em;
 }
 
 .Why > .inner {
